--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/serialize": "^1.1.0",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
+    "@mui/joy": "^5.0.0-alpha.50",
     "@mui/material": "^5.10.7",
     "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
